# madrax

./: .gitignore  AGENTS.md  README.md  pyproject.toml
altered/: license.txt  setup.py  testMadrax.py
altered/docs/: requirements.txt  requirementsNew.txt
altered/madrax/: ForceField.py  StructureOptimizer.py  dataStructures.py  utils.py
docs/source/: StructureOptimizer.rst  conf.py  contacts.rst  index.rst  mutatingEngine.rst  quickstart.rst
madrax/: ForceField.py  dataStructures.py
madrax/energies/: BondLenConstrain.py  Disulfide_net.py  Electro_net.py  EntropySC.py  SolventAccessibility.py  Vdw.py
madrax/mutate/: rotator.py
madrax/sources/: geometry.py  hashings.py  hashingsGeneration.py  math_utils.py  select_best_virtualAtoms.py
scripts/: generate_reference_data.py
tests/: reference_data.pt  test_angle_scorer.py  test_bondlen_constrain.py  test_clash.py  test_disulfide.py  test_electro.py  test_forcefield.py  test_hbond.py  test_hbond_shapes.py  test_solvation.py  test_utils.py  test_vdw.py  test_vitra.py
vitra/: ForceField.py  StructureOptimizer.py  data_structures.py  utils.py
vitra/energies/: AngleScorer.py  BondLenConstrain.py  Clash_net.py  Disulfide_net.py  Electro_net.py  EntropySC.py  HBond_net.py  Solvatation.py  Vdw.py  __init__.py  angle_scorer.py  bond_len_constrain.py  clash_net.py  disulfide_net.py  electro_net.py  entropy_sc.py  hbond_net.py  solvatation.py  solvent_accessibility.py  vdw.py
vitra/mutate/: mutatingEngine.py  optimizer.py  rotator.py
vitra/parameters/: final_model.weights  parameters.pickle
(+89 files in other folders)
